fix dark mode

--- a/website/pages/styles.module.scss
+++ b/website/pages/styles.module.scss
@@ -8,6 +8,8 @@
 .heroBanner {
     padding: 2rem 0;
     padding-bottom: 0;
+    // transparent background color
+    --ifm-hero-background-color: #ffffff00;
     text-align: center;
     position: relative;
     overflow: hidden;
